--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Proyecto Base</Base></h1>
+    <h1>Java Script</Base></h1>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
